fixed more top-nav alignment, images still seem to be hugging flexbox baseline

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,39 +13,45 @@
         a:hover {
             text-decoration: underline;
         }
-        
+        #profile-pic {
+            border-radius: 50%;
+            max-width: 30px;
+        }
         nav {
             position: relative;
             width: 100%;
             display: flex;
-            flex-flow: wrap;
-            align-items: center;
+            align-items: baseline;
             justify-content: space-between;
             min-height: 100%;
         }
-        .header-nav {
+        .header-nav-left {
             padding-left: 0;
             margin-right: 10px;
         }
-        #profile-pic {
-            border-radius: 50%;
-            max-width: 30px;
+        .header-nav-right {
+            padding-top: 8px;
+            padding-left: 0;
+            margin-right: 10px;
+            align-items: center;
+        }
+        ul > img {
+            align-content: center;
         }
         ul > a, ul > img {
             padding: 0 5px;
         }
         .header-img:hover {
-            box-shadow: 0 0 10px 0 gray;
-            border-radius: 50%;
+            box-shadow: 0 0 10px gray;
         }
         section {
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 5vh;
+            margin-top: 13vh;
         }
         .logo {
-            padding: 50px;
+            margin: 30px;
         }
         .input-receiver {
             display: flex;
@@ -54,6 +60,7 @@
             height: 45px;
             border: 1px solid lightgray;
             border-radius: 25px;
+            cursor: pointer;
         }
         .input-receiver > img {
             align-self: center;
@@ -82,6 +89,7 @@
             height: 30px;
             padding: 5px 10px;
             margin: 5px 10px;
+            cursor: pointer;
         }
         button:hover {
             box-shadow: 0 0 2px 0 gray;
